--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-router": "^1.15.23",
     "@tanstack/router-devtools": "^1.15.23",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
