--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-router": "^1.15.23",
     "@tanstack/router-devtools": "^1.15.23",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
